deploy/api/base/redirect-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: web-history--swagger-docs-redirect
  namespace: default
spec:
  redirectRegex:
    regex: ^(https?)://(web-history.*?)/docs/swagger/?$
    replacement: $1://$2/docs/swagger/index.html
