deploy/api/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-history.api  # Sets Deployment name
  labels:
    app: api
    project: web-history
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      project: web-history
  template:
    metadata:
      labels:
        app: api
        project: web-history
    spec:
      containers:
        - name: web-history-api
          image: ghcr.io/htchan/web-history:api-v2024.04.03-f9db50c # Sets Image
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              memory: 50M
            requests:
              memory: 5M
          volumeMounts:
            - mountPath: /migrations
              name: web-history-migrations-volume
      volumes:
        - name: web-history-worker-migrations-volume
          persistentVolumeClaim:
            claimName: web-history.worker.migrations-claim
      restartPolicy: Always
