deploy/api/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-history-backend-service
  labels:
    app: backend
    project: web-history
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: backend
    project: web-history
