deploy/api/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-history-backedn-ingress
spec:
  rules: []
